# CLI-store

./: .gitignore  CLI标准.md  README.md
Comfyui-CLI/: .env.example  .gitignore  README.md  config.example.yaml  pyproject.toml  setup.sh  start-web.sh  stop-web.sh  verify.sh
Comfyui-CLI/comfyui/: __init__.py
Comfyui-CLI/comfyui/capabilities/: digital.py
Comfyui-CLI/comfyui/cli/: main.py  output.py
Comfyui-CLI/comfyui/config/: manager.py  root.py  schema.py
Comfyui-CLI/comfyui/core/: api.py  prompt.py  registry.py  service.py
Comfyui-CLI/comfyui/providers/: base.py
Comfyui-CLI/comfyui/web/: __init__.py  jobs.py  server.py
Comfyui-CLI/docs/: 使用指南.md
Comfyui-CLI/guide/: 服务器.md
Comfyui-CLI/scripts/: verify_env.py  verify_web_api.py
Comfyui-CLI/tests/: test_web_api.py
Comfyui-CLI/web/static/: app.js  index.html  style.css
Comfyui-CLI/workflows/digital/: digital_combination.json  digital_customize.json  digital_image.json
Comfyui-CLI/workflows/image/: flux_txt2img.json  sd15_img2img.json  wan2.1_txt2img.json  z_image_turbo_txt2img.json
Comfyui-CLI/workflows/video/: wan2.1_img2vid.json  wan2.1_txt2vid.json
Video-editing-CLI/: .env.example  README.md  config.yaml  config.yaml.example  pyproject.toml  setup.sh  start-web.sh  stop.sh  verify.sh
Video-editing-CLI/agent/: manifest.json
Video-editing-CLI/guide/: A-Roll剪辑方案.md  剪映工程格式调研.md
Video-editing-CLI/outputs/20260709_114434_ae9b5c28/: edit_decisions.json  timeline.fcpxml  transcript.srt
Video-editing-CLI/outputs/20260709_114733_bca90185/: edit_decisions.json  timeline.fcpxml
Video-editing-CLI/scripts/: verify_env.py
Video-editing-CLI/tests/: test_align.py  test_checkpoint_batch.py  test_demo.py  test_edl.py  test_fcpxml.py  test_llm_review.py  test_multicam.py  test_refine.py  test_web_api.py  test_wisp_copy.py
Video-editing-CLI/video_edit/: __init__.py  cli.py  config.py
Vplatform-CLI/: .gitignore  README.md  config.example.yaml  pyproject.toml  setup.sh  start.sh  stop.sh  verify.sh
Vplatform-CLI/docs/: m.md  功能说明.md
Vplatform-CLI/guide/: 算力服务器.md
Vplatform-CLI/prompts/: storyboard.txt
Vplatform-CLI/scripts/: api_server.py  autodl-tunnel.sh  openclaw.sh  sync_openclaw_skill.sh  verify_env.py
Vplatform-CLI/tests/: test_video_post.py
Vplatform-CLI/vplatform/: __init__.py  _version.py  core.py
Vplatform-CLI/web/: index.html
Vplatform-CLI/workflows/: flux_txt2img.json  wan2.1_img2vid.json  wan2.1_txt2img.json  wan2.1_txt2vid.json
autocar-collecion-CLI/: .env.example  README.md  SKILL.md  cli.py  pyproject.toml  verify.sh
autocar-collecion-CLI/agent/: manifest.json
autocar-collecion-CLI/clauto/: README.md  __init__.py  cli.py  config.py  exceptions.py  fetch.py  formatters.py  miit.py  monitor.py  monitor_complexity.md  news.py  result.py
autocar-collecion-CLI/clauto.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
autocar-collecion-CLI/tests/: test_intel_signals.py
github-trend-CLI/: .env.example  README.md  SKILL.md  pyproject.toml  verify.sh
github-trend-CLI/agent/: manifest.json
github-trend-CLI/github_trend/: __init__.py  cli.py
github-trend-CLI/github_trend.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
intelligence-collection-CLI/: .env.example  README.md  SKILL.md  pyproject.toml  verify.sh
intelligence-collection-CLI/agent/: manifest.json
intelligence-collection-CLI/intel_collect/: __init__.py  cli.py
invest-CLI/: .env.example  .gitignore  README.md  SKILL.md  config.yaml.example  pyproject.toml  verify.sh
invest-CLI/agent/: manifest.json
invest-CLI/guide/: architecture.md
invest-CLI/invest/: __init__.py  cli.py  config.py
invest-CLI/invest_core/: __init__.py  paths.py  types.py
invest-CLI/tests/: test_cli_demo.py
screen-watch-CLI/: .env.example  README.md  SKILL.md  config.yaml.example  pyproject.toml  verify.sh
screen-watch-CLI/agent/: manifest.json
screen-watch-CLI/guide/: TECHNICAL_DESIGN.md  微信客户端直播监控实战清单.md
screen-watch-CLI/logs/: e2e_zhibo.db  screen-watch.db
screen-watch-CLI/screen_watch/: __init__.py  calibrate.py  calibrate_ui.py  cli.py  config.py  config_io.py
screen-watch-CLI/screen_watch.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
screen-watch-CLI/scripts/: e2e-smoke.sh  pipeline-zhibo.sh  start.sh  stop.sh
screen-watch-CLI/tests/: test_calibrate_ui.py  test_config_io.py  test_ocr_cli.py  test_region_pixels.py  test_sqlite_store.py  test_vision_ocr.py  test_wechat_live_parser.py
social-monitor-CLI/: .env.example  .gitignore  CHANGELOG.md  README.md  SKILL.md  config.yaml.example  docker-compose.yml  monitor.yaml.example  pyproject.toml  requirements.txt  setup.py  verify.sh
social-monitor-CLI/agent/: manifest.json
social-monitor-CLI/guide/: IP池构建方法研究报告_20260609.md  social-monitor-CLI技术方案_20260616.md  监控渠道-账号.md  监控范围定义.md  社媒平台反爬策略深度研究_20260512.md
social-monitor-CLI/scripts/: init-db.sh  monitor-daily.sh  monitor-live.sh  resolve-p0-accounts.sh  start.sh  stop.sh
social-monitor-CLI/social_monitor/: __init__.py  cli.py  config.py
social-monitor-CLI/tests/: __init__.py  test_account_registry.py  test_antiscrape.py  test_bilibili_comments.py  test_bilibili_danmaku.py  test_bilibili_wbi.py  test_cookie_checker.py  test_cookie_manager.py  test_diff_zhihu.py  test_monitor_routes.py  test_monitor_runner.py  test_octopus_import.py  test_storage.py  test_wechat.py  test_weibo.py  test_weibo_trending_date.py  测试计划.md
zhibo-monitor-CLI/: .env.example  README.md  SKILL.md  main.py  pyproject.toml  verify.sh
zhibo-monitor-CLI/agent/: manifest.json
zhibo-monitor-CLI/guide/: B站新能源汽车发布会监控实战清单.md  SCRAPER_EVALUATION.md  TECHNICAL_DESIGN.md  抖音新能源汽车发布会监控实战清单.md  汽车发布会价值挖掘.md  汽车发布会评价指标.md  视频号新能源汽车发布会监控实战清单.md
zhibo-monitor-CLI/migrations/: env.py
zhibo-monitor-CLI/scripts/: backfill_danmaku_analysis.py  migrate_sqlite_to_pg.py  post_event_summary.py  weibo_probe.py  weibo_probe_play.py
zhibo-monitor-CLI/tests/: test_ingest_screen_watch.py
zhibo-monitor-CLI/zhibo_monitor/: __init__.py  cli.py
(+167 files in other folders)
