[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "video-edit-cli"
version = "0.3.0"
description = "Video-editing-CLI — AI 辅助 A-Roll 口播初剪，输出 FCPXML 时间轴"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "loguru>=0.7.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
whisper = [
    "faster-whisper>=1.0.0",
]
whisperx = [
    "whisperx>=3.1.0",
    "torch",
]
dev = [
    "pytest>=8.0.0",
]
web = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "python-multipart>=0.0.12",
]

[project.scripts]
video-edit = "video_edit.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["video_edit"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
