[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "vplatform"
version = "2.1.0+cli"
description = "Vplatform CLI — OpenClaw + ComfyUI storyboard video orchestration"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0.0",
    "edge-tts==7.2.7",
    "loguru>=0.7.0",
    "httpx>=0.28.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
]

[project.scripts]
vplatform = "vplatform.cli.main:main"

[tool.hatch.build.targets.wheel]
packages = ["vplatform"]
