[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "clauto"
version = "0.2.0"
description = "CLI automation toolkit - 工信部公告 / 汽车新闻 / 车型监测"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
postgres = ["psycopg2-binary>=2.9.0"]

[project.scripts]
clauto = "clauto.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["clauto*"]
