[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "github-trend"
version = "0.1.0"
description = "GitHub 热门仓库趋势采集 CLI"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0.0",
    "httpx>=0.24.0",
    "PyYAML>=6.0",
]

[project.scripts]
github-trend = "github_trend.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["github_trend*"]
