[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "invest"
version = "2.3.0"
description = "投资决策系统 CLI — 宏观评分、信号生成、模拟交易"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "click>=8.0.0",
    "pydantic>=2.0.0",
    "PyYAML>=6.0",
    "requests>=2.28.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
data = ["akshare>=1.12.0"]
dev = ["pytest>=7.0.0"]

[project.scripts]
invest = "invest.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["invest*", "invest_core*"]
