[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zhibo-monitor"
version = "0.1.0"
description = "新能源车企发布会直播监控与分析中台"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "typer>=0.9.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "python-dotenv>=1.0.0",
    "playwright>=1.30.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[project.scripts]
zhibo-monitor = "zhibo_monitor.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["zhibo_monitor*", "app*"]
